Release a38-Chat 1.0.0